--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foresty - Ecology and Environment Template</title>
+    <title>Green AI - Revolutionising Smart City Infrastructure</title>
     {% load static %}
     <!-- Favicon img -->
-    <link rel="shortcut icon" href="{% static 'images/favicon.png' %}' %}">
+    <link rel="shortcut icon" href="{% static 'images/favicon.png' %}">
     <!-- Bootstarp min css -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <!-- All min css -->
@@ -28,7 +28,7 @@
 <body>
 
     <!-- Preloader area start -->
-    <div id="loading">
+    {% comment %} <div id="loading">
         <div id="loading-center">
             <div id="loading-center-absolute">
                 <div class="loading-icon text-center d-flex flex-column align-items-center justify-content-center">
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> {% endcomment %}
     <!-- Preloader area end -->
 
     <!-- Header area start here -->
@@ -44,11 +44,11 @@
         <div class="header-section">
             <div class="container">
                 <div class="header-wrapper">
-                    <div class="logo-menu">
-                        <a href="index.html" class="logo">
-                            <img src="{% static 'images/logo/logo.svg' %}" alt="logo">
+                    {% comment %} <div class="logo-menu">
+                        <a href="{% url 'index' %}" class="logo">
+                            <img src="{% static 'images/logo/logo.png' %}" alt="logo">
                         </a>
-                    </div>
+                    </div> {% endcomment %}
                     <div class="header-bar d-xl-none">
                         <span></span>
                         <span></span>
@@ -56,24 +56,28 @@
                     </div>
                     <ul class="main-menu">
                         <li>
-                            <a href="#">Home <i class="fas fa-chevron-down"></i></a>
-                            <ul class="sub-menu">
-                                <li><a href="index.html">Environmental One</a></li>
-                                <li><a href="index-2.html">Environmental Two</a></li>
-                                <li><a href="index-3.html">Environmental Three</a></li>
-                                <li><a href="index-4.html">Animal Protection Zoo</a></li>
-                                <li><a href="index-5.html">Environmental NGO</a></li>
-                            </ul>
+                            <a href="{% url 'index' %}">Home</a>
                         </li>
                         <li>
-                            <a href="#">About Us <i class="fas fa-chevron-down"></i></a>
-                            <ul class="sub-menu">
-                                <li><a href="about.html">About One</a></li>
-                                <li><a href="about-2.html">About Two</a></li>
-                            </ul>
+                            <a href="{% url 'about' %}">About Us</a>
+                        </li>
+                         <li>
+                            <a href="{% url 'about' %}">Products</a>
+                        </li>
+                         <li>
+                            <a href="{% url 'about' %}">Solutions</a>
+                        </li>
+                         <li>
+                            <a href="{% url 'about' %}">Sustainability</a>
+                        </li>
+                         <li>
+                            <a href="{% url 'about' %}">Resources</a>
                         </li>
                         <li>
-                            <a href="#">Services <i class="fas fa-chevron-down"></i></a>
+                            <a href="{% url 'contact' %}">Contact Us</a>
+                        </li>
+                        <li>
+                            <a href="#">Support <i class="fas fa-chevron-down"></i></a>
                             <ul class="sub-menu">
                                 <li><a href="service.html">Service One</a></li>
                                 <li><a href="service-2.html">Service Two</a></li>
@@ -81,7 +85,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a id="mega-menu-btn" href="#">Pages <i class="fas fa-chevron-down"></i></a>
+                            <a id="mega-menu-btn" href="#">Partners <i class="fas fa-chevron-down"></i></a>
                             <ul class="sub-menu">
                                 <li class="d-block d-xl-none"><a href="project.html">Our Project 01</a></li>
                                 <li class="d-block d-xl-none"><a href="project-2.html">Our Project 02</a></li>
@@ -105,7 +109,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="#">Blog <i class="fas fa-chevron-down"></i></a>
+                            <a href="#">Feedback<i class="fas fa-chevron-down"></i></a>
                             <ul class="sub-menu">
                                 <li class="sub_menu_wrp d-none d-xl-block"><a href="#">Blog Grid <i
                                             class="fas fa-chevron-right float-end"></i></a>
@@ -135,11 +139,9 @@
                                 <li class="d-block d-xl-none"><a href="blog-single.html">Blog Details</a></li>
                             </ul>
                         </li>
-                        <li>
-                            <a href="contact.html">Contact Us</a>
-                        </li>
+                        
                         <li class="m-0 menu-btn ">
-                            <a href="contact.html"><span>Get a quote</span> <i class="fa-solid fa-angles-right"></i></a>
+                            <a href="{% url 'contact' %}"><span>Get a quote</span> <i class="fa-solid fa-angles-right"></i></a>
                         </li>
                     </ul>
                     <!-- Mega menu area start here -->
@@ -224,4 +226,5 @@
 
 {% include 'website/shared/footer.html' %}
 
-    
+</body>
+</html>
