Added the remaining web pages

--- a/website/static/sass/_layout/_section.scss
+++ b/website/static/sass/_layout/_section.scss
@@ -1511,7 +1511,7 @@
 		}
 		&::after {
 			position: absolute;
-			content: url(../../static/images/testimonial/testimonial-line.png);
+			content: url(../../static/images/testimonial/testimonial-line.png' %});
 			left: -80px;
 			top: 5px;
 		}
