--- a/website/templates/website/shared/footer.html
+++ b/website/templates/website/shared/footer.html
@@ -48,20 +48,20 @@
                                     class="footer__item-title-line2"></span>
                             </div>
                             <ul>
-                                <li class="pb-1"><a href="service-single.html"><i
-                                            class="fa-solid fa-chevron-right pe-1 primary-color"></i> Water Conservation
+                                <li class="pb-1"><a href="{% url 'about' %}"><i
+                                            class="fa-solid fa-chevron-right pe-1 primary-color"></i> About Us
                                     </a>
                                 </li>
-                                <li class="pb-1"><a href="service-single.html"><i
-                                            class="fa-solid fa-chevron-right pe-1 primary-color"></i> Eco System
+                                <li class="pb-1"><a href="{% url 'products' %}"><i
+                                            class="fa-solid fa-chevron-right pe-1 primary-color"></i> Our Products
                                     </a>
                                 </li>
-                                <li class="pb-1"><a href="service-single.html"><i
-                                            class="fa-solid fa-chevron-right pe-1 primary-color"></i> Plastic Recycleing
+                                <li class="pb-1"><a href="{% url 'contact' %}"><i
+                                            class="fa-solid fa-chevron-right pe-1 primary-color"></i> Contact Us
                                     </a>
                                 </li>
-                                <li class="pb-1"><a href="service-single.html"><i
-                                            class="fa-solid fa-chevron-right pe-1 primary-color"></i> Urban planning
+                                <li class="pb-1"><a href="{% url 'sustainability' %}"><i
+                                            class="fa-solid fa-chevron-right pe-1 primary-color"></i> Sustainability
                                     </a>
                                 </li>
                                 <li><a href="service-single.html"><i
@@ -81,14 +81,14 @@
                             </div>
                             <ul class="footer__item-blog">
                                 <li class="pb-3">
-                                    <img src="{% static 'images/footer/01.png' %}" alt="image">
+                                    <img src="{% static 'images/footer/01.png' %}' %}" alt="image">
                                     <div class="ms-3">
                                         <h4><a href="blog-single.html">Close up picture of the sapling</a></h4>
                                         <span>2 weeks ago</span>
                                     </div>
                                 </li>
                                 <li>
-                                    <img src="{% static 'images/footer/02.png' %}" alt="image">
+                                    <img src="{% static 'images/footer/02.png' %}' %}" alt="image">
                                     <div class="ms-3">
                                         <h4><a href="blog-single.html">Close up picture of the sapling</a></h4>
                                         <span>2 weeks ago</span>
