--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -8,7 +8,7 @@
     <title>Green AI - Revolutionising Smart City Infrastructure</title>
     {% load static %}
     <!-- Favicon img -->
-    <link rel="shortcut icon" href="{% static 'images/favicon.png' %}">
+    <link rel="shortcut icon" href="{% static 'images/favicon.png' %}' %}">
     <!-- Bootstarp min css -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <!-- All min css -->
@@ -24,7 +24,32 @@
     <!-- Style css -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
+<style>
+.our-info {
+    position: relative;
+    overflow: hidden;
+    background: none;
+    height: 250px; /* Adjust height as necessary */
+}
 
+.background-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('{% static "images/bg/aerial-city.jpg" %}');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center; /* Adjust this to align the desired section of the image */
+    z-index: -1;
+}
+
+.our-info__input, .our-info__social-icon {
+    position: relative;
+    z-index: 1;
+}
+</style>
 <body>
 
     <!-- Preloader area start -->
@@ -46,7 +71,7 @@
                 <div class="header-wrapper">
                     {% comment %} <div class="logo-menu">
                         <a href="{% url 'index' %}" class="logo">
-                            <img src="{% static 'images/logo/logo.png' %}" alt="logo">
+                            <img src="{% static 'images/logo/logo.png' %}' %}" alt="logo">
                         </a>
                     </div> {% endcomment %}
                     <div class="header-bar d-xl-none">
@@ -62,82 +87,34 @@
                             <a href="{% url 'about' %}">About Us</a>
                         </li>
                          <li>
-                            <a href="{% url 'about' %}">Products</a>
+                            <a href="{% url 'products' %}">Products</a>
                         </li>
                          <li>
-                            <a href="{% url 'about' %}">Solutions</a>
+                            <a href="{% url 'solutions' %}">Solutions</a>
                         </li>
                          <li>
-                            <a href="{% url 'about' %}">Sustainability</a>
+                            <a href="{% url 'sustainability' %}">Sustainability</a>
                         </li>
-                         <li>
-                            <a href="{% url 'about' %}">Resources</a>
+                        <li>
+                            <a href="#">Resources <i class="fas fa-chevron-down"></i></a>
+                            <ul class="sub-menu">
+                                <li><a href="service.html">Blogs</a></li>
+                                <li><a href="service-2.html">Whitepapers</a></li>
+                                <li><a href="service-single.html">Case Studies</a></li>
+                                <li><a href="service-single.html">FAQs</a></li>
+                            </ul>
                         </li>
                         <li>
                             <a href="{% url 'contact' %}">Contact Us</a>
                         </li>
                         <li>
-                            <a href="#">Support <i class="fas fa-chevron-down"></i></a>
-                            <ul class="sub-menu">
-                                <li><a href="service.html">Service One</a></li>
-                                <li><a href="service-2.html">Service Two</a></li>
-                                <li><a href="service-single.html">Service Details</a></li>
-                            </ul>
+                            <a href="{% url 'support' %}">Support</a>
                         </li>
                         <li>
-                            <a id="mega-menu-btn" href="#">Partners <i class="fas fa-chevron-down"></i></a>
-                            <ul class="sub-menu">
-                                <li class="d-block d-xl-none"><a href="project.html">Our Project 01</a></li>
-                                <li class="d-block d-xl-none"><a href="project-2.html">Our Project 02</a></li>
-                                <li class="d-block d-xl-none"><a href="project-single.html">Project Details</a></li>
-                                <li class="d-block d-xl-none"><a href="donation.html">Donation 01</a></li>
-                                <li class="d-block d-xl-none"><a href="donation-2.html">Donation 02</a></li>
-                                <li class="d-block d-xl-none"><a href="donation-single.html">Donation Details</a></li>
-                                <li class="d-block d-xl-none"><a href="event.html">Events 01</a></li>
-                                <li class="d-block d-xl-none"><a href="event-2.html">Events 01</a></li>
-                                <li class="d-block d-xl-none"><a href="event-single.html">Events Details</a></li>
-                                <li class="d-block d-xl-none"><a href="shop.html">Shop</a></li>
-                                <li class="d-block d-xl-none"><a href="shop-single.html">Shop Details</a></li>
-                                <li class="d-block d-xl-none"><a href="cart.html">Cart</a></li>
-                                <li class="d-block d-xl-none"><a href="checkout.html">Checkout</a></li>
-                                <li class="d-block d-xl-none"><a href="team.html">Our Teams 01</a></li>
-                                <li class="d-block d-xl-none"><a href="team-2.html">Our Teams 02</a></li>
-                                <li class="d-block d-xl-none"><a href="team-single.html">Our Teams Details</a></li>
-                                <li class="d-block d-xl-none"><a href="faq.html">FAQ</a></li>
-                                <li class="d-block d-xl-none"><a href="login.html">Login / Register</a></li>
-                                <li class="d-block d-xl-none"><a href="error.html">404 Error</a></li>
-                            </ul>
+                            <a href="{% url 'partners' %}">Partners</a>
                         </li>
                         <li>
-                            <a href="#">Feedback<i class="fas fa-chevron-down"></i></a>
-                            <ul class="sub-menu">
-                                <li class="sub_menu_wrp d-none d-xl-block"><a href="#">Blog Grid <i
-                                            class="fas fa-chevron-right float-end"></i></a>
-                                    <ul class="sub_sub_menu">
-                                        <li><a href="blog-2.html">2 Columns</a></li>
-                                        <li><a href="blog-3.html">3 Columns</a></li>
-                                    </ul>
-                                </li>
-                                <li class="d-block d-xl-none"><a href="blog-2.html">Blog Grid One</a></li>
-                                <li class="d-block d-xl-none"><a href="blog-3.html">Blog Grid Two</a></li>
-                                <li class="sub_menu_wrp d-none d-xl-block"><a href="#">Blog Standard <i
-                                            class="fas fa-chevron-right float-end"></i></a>
-                                    <ul class="sub_sub_menu">
-                                        <li><a href="blog-left.html">Left SideBar</a></li>
-                                        <li><a href="blog.html">Right SideBar</a></li>
-                                    </ul>
-                                </li>
-                                <li class="d-block d-xl-none"><a href="blog.html">Blog Standard One</a></li>
-                                <li class="d-block d-xl-none"><a href="blog-left.html">Blog Standard Two</a></li>
-                                <li class="sub_menu_wrp d-none d-xl-block"><a href="#">Blog Details <i
-                                            class="fas fa-chevron-right float-end"></i></a>
-                                    <ul class="sub_sub_menu">
-                                        <li><a href="blog-single-left.html">Left SideBar</a></li>
-                                        <li><a href="blog-single.html">Right SideBar</a></li>
-                                    </ul>
-                                </li>
-                                <li class="d-block d-xl-none"><a href="blog-single.html">Blog Details</a></li>
-                            </ul>
+                            <a href="{% url 'feedback' %}">Feedback</a>
                         </li>
                         
                         <li class="m-0 menu-btn ">
@@ -223,6 +200,33 @@
 
 {% block content %}
 {% endblock %}
+<!-- Our info area start here -->
+<div class="our-info">
+    <div class="background-img"></div>
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-3 wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".4s">
+            </div>
+            <div class="col-lg-5 wow fadeInDown" data-wow-duration="1.6s" data-wow-delay=".6s">
+                <div class="our-info__input">
+                    <input type="text" placeholder="Your email Address">
+                    <i class="fa-regular fa-envelope our-info__input-envelope"></i>
+                    <i class="fa-solid fa-paper-plane our-info__input-plane"></i>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="our-info__social-icon float-lg-end float-none mt-4 mt-lg-">
+                    <a class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s" href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay=".3s" href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a class="wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".4s" href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a class="wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".5s" href="#"><i class="fa-brands fa-youtube"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Our info area end here -->
+
 
 {% include 'website/shared/footer.html' %}
 
