--- a/website/templates/website/contact.html
+++ b/website/templates/website/contact.html
@@ -2,41 +2,85 @@
 
 {% block content %}
 {% load static %}
+<style>
+        .page-banner.bg-image {
+            background-image: url('/static/images/contact/contact.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+        .pt-130 {
+            padding-top: 130px;
+        }
+        .pb-130 {
+            padding-bottom: 130px;
+        }
+
+        .content.bg-image {
+            background-image: url("{% static 'images/icon/customer_care.jpg' %}");
+            background-size: cover;
+            background-position: center;
+            color: white; /* Ensure text is readable on the background */
+        }
+</style>
 <main>
-<!-- Our info area start here -->
-        <div class="our-info" data-background="{% static 'images/bg/aerial-city.jpg' %}">
+        <!-- Page banner area start here -->
+        <section class="page-banner bg-image pt-130 pb-130">
             <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-3 wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".4s">
-                        <a href="{% url 'index' %}" class="our-info__logo mb-4 mb-lg-">
-                            <img src="{% static 'images/logo/logo-light.svg' %}" alt="logo">
-                        </a>
-                    </div>
-                    <div class="col-lg-5 wow fadeInDown" data-wow-duration="1.6s" data-wow-delay=".6s">
-                        <div class="our-info__input">
-                            <input type="text" placeholder="Your email Address">
-                            <i class="fa-regular fa-envelope our-info__input-envelope"></i>
-                            <i class="fa-solid fa-paper-plane our-info__input-plane"></i>
+                <h2 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s">Contact Us</h2>
+                <div class="breadcrumb-list wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".4s">
+                    <a href="{% url 'index' %}">Home :</a>
+                    <span class="primary-color">Contact Us</span>
+                </div>
+            </div>
+        </section>
+        <!-- Page banner area end here -->
+
+        <!-- Contact form area start here -->
+        <section class="contact pt-130 pb-130">
+            <div class="container">
+                <div class="row g-4">
+                    <div class="col-lg-6">
+                        <div class="content bg-image">
+                            <h2>Have a question for us? <br>
+                                Let's talk.</h2>
+                            
+                            <div class="arry"><img src="{% static 'images/icon/arry.png' %}" alt=""></div>
+                            <ul>
+                                <li><a href="https://www.google.com/maps/d/viewer?mid=1UZ57Drfs3SGrTgh6mrYjQktu6uY&amp;hl=en_US&amp;ll=18.672105000000013%2C105.68673800000003&amp;z=17"
+                                        target="_blank"><i class="fa-solid fa-location-dot"></i>Westport Industrial City
+                                        </a>
+                                </li>
+                                <li><a href="tel:1-732-798-0976"><i class="fa-solid fa-phone-volume"></i>+254 712 345 678
+                                        </a>
+                                </li>
+                                <li><a href="mailto:company.info@mail.com"><i
+                                        class="fa-solid fa-envelope"></i>info@greenai.com</a></li>
+                            </ul>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="our-info__social-icon float-lg-end float-none mt-4 mt-lg-">
-                            <a class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s" href="#"><i
-                                    class="fa-brands fa-facebook-f"></i></a>
-                            <a class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay=".3s" href="#"><i
-                                    class="fa-brands fa-twitter"></i></a>
-                            <a class="wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".4s" href="#"><i
-                                    class="fa-brands fa-linkedin-in"></i></a>
-                            <a class="wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".5s" href="#"><i
-                                    class="fa-brands fa-youtube"></i></a>
+                    <div class="col-lg-6">
+                        <div class="form-area">
+                            <form method="post" action="{% url 'contact' %}">
+                                {% csrf_token %}
+                                {{ form.as_p }}
+                                <button type="submit" class="mt-40">Submit Now <i class="fa-solid fa-arrow-right-long"></i></button>
+                            </form>
+                            {% if messages %}
+                                <ul class="messages">
+                                    {% for message in messages %}
+                                        <li class="{{ message.tags }}">{{ message }}</li>
+                                    {% endfor %}
+                                </ul>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- Our info area end here -->
+        </section>
+        <!-- Contact form area end here -->
 </main>
-<!-- Back to top area start here -->
+    <!-- Back to top area start here -->
     <div class="scroll-up">
         <svg class="scroll-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
             <path d="M50,1 a49,49  ,1 ,98 a49,49  ,1 ,-98" />
