--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -180,7 +180,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="form-area">
-                            <form method="post" action="{% url 'index' %}">
+                            <form method="post">
                                 {% csrf_token %}
                                 {{ form.as_p }}
                                 <button type="submit" class="mt-40">Submit Now <i class="fa-solid fa-arrow-right-long"></i></button>
@@ -220,7 +220,7 @@
                         <div class="donation__item blog-two__item blog-three__item bor">
                             <div class="blog-two__image blog-three__image">
                                 <div class="image">
-                                    <img src="{% static 'images/blog/blog-three-image1.jpg" alt="image">
+                                    <img src="{% static 'images/blog/blog-three-image1.jpg' %}" alt="image">
                                     <div class="blog-two__info">
                                         <h4>15 <br> JUNE</h4>
                                         <span>2023</span>
@@ -239,7 +239,7 @@
                         <div class="donation__item blog-two__item blog-three__item bor">
                             <div class="blog-two__image blog-three__image">
                                 <div class="image">
-                                    <img src="{% static 'images/blog/blog-three-image2.jpg" alt="image">
+                                    <img src="{% static 'images/blog/blog-three-image2.jpg' %}" alt="image">
                                     <div class="blog-two__info">
                                         <h4>15 <br> JUNE</h4>
                                         <span>2023</span>
@@ -259,7 +259,7 @@
                         <div class="donation__item blog-two__item blog-three__item bor">
                             <div class="blog-two__image blog-three__image">
                                 <div class="image">
-                                    <img src="{% static 'images/blog/blog-three-image3.jpg" alt="image">
+                                    <img src="{% static 'images/blog/blog-three-image3.jpg' %}" alt="image">
                                     <div class="blog-two__info">
                                         <h4>15 <br> JUNE</h4>
                                         <span>2023</span>
@@ -278,40 +278,6 @@
             </div>
         </section>
         <!-- Blog area end here -->
-
-        <!-- Our info area start here -->
-        <div class="our-info" data-background="{% static 'images/bg/aerial-city.jpg' %}">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-3 wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".4s">
-                        <a href="{% url 'index' %}" class="our-info__logo mb-4 mb-lg-">
-                            <img src="{% static 'images/logo/logo-light.svg' %}" alt="logo">
-                        </a>
-                    </div>
-                    <div class="col-lg-5 wow fadeInDown" data-wow-duration="1.6s" data-wow-delay=".6s">
-                        <div class="our-info__input">
-                            <input type="text" placeholder="Your email Address">
-                            <i class="fa-regular fa-envelope our-info__input-envelope"></i>
-                            <i class="fa-solid fa-paper-plane our-info__input-plane"></i>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="our-info__social-icon float-lg-end float-none mt-4 mt-lg-">
-                            <a class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s" href="#"><i
-                                    class="fa-brands fa-facebook-f"></i></a>
-                            <a class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay=".3s" href="#"><i
-                                    class="fa-brands fa-twitter"></i></a>
-                            <a class="wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".4s" href="#"><i
-                                    class="fa-brands fa-linkedin-in"></i></a>
-                            <a class="wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".5s" href="#"><i
-                                    class="fa-brands fa-youtube"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Our info area end here -->
-
     </main>
 
     
