--- a/website/templates/website/partners.html
+++ b/website/templates/website/partners.html
@@ -1,7 +1,217 @@
 {% extends 'website/base.html' %}
 {% block content %}
 {% load static %}
+<style>
+        .page-banner.bg-image {
+            background-image: url('/static/images/partners/partners.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+        .pt-130 {
+            padding-top: 130px;
+        }
+        .pb-130 {
+            padding-bottom: 130px;
+        }
+</style>
+<main>
+        <!-- Page banner area start here -->
+        <section class="page-banner bg-image pt-130 pb-130">
+            <div class="container">
+                <h2 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s">Partners and Investors</h2>
+                <div class="breadcrumb-list wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".4s">
+                    <a href="{% url 'index' %}">Home :</a>
+                    <span class="primary-color">Partners and Investors</span>
+                </div>
+            </div>
+        </section>
+        <!-- Page banner area end here -->
 
+        <!-- About area start here -->
+        <section class="about-two pt-130 pb-130">
+            <div class="about-two__shape-right d-none d-md-block bobble__animation">
+                <img src="{% static 'images/shape/about-two-shape-right.png' %}" alt="shape">
+            </div>
+            <div class="container">
+                <div class="row g-4">
+                    <div class="col-xl-6">
+                        <div class="image">
+                            <img src="{% static 'images/about/about-two-inner.png' %}" alt="image">
+                        </div>
+                    </div>
+                    <div class="col-xl-6">
+                        <div class="about-two__right-item">
+                            <div class="section-header mb-4">
+                                <h5 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s"><img
+                                        src="{% static 'images/icon/leaf.svg' %}" alt="image"> protecting nature</h5>
+                                <h2 class="wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".4s">Protecting Nature
+                                    By Proper Waste Management!g</h2>
+                                <p class="wow fadeInUp" data-wow-duration="1.6s" data-wow-delay=".6s">Quis ipsum
+                                    suspendisse ultrices gravida. Risus commodo viverra. Lorem ipsum dolor sit amet,
+                                    consectetur adipiscing elit,
+                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. It's important to
+                                    note that tree planting should be
+                                    carried out.</p>
+                            </div>
+                            <div class="row g-3">
+                                <div class="col-md-6 wow fadeInUp" data-wow-duration="1.8s" data-wow-delay=".8s">
+                                    <div class="d-flex align-items-center">
+                                        <img src="{% static 'images/about/about-info1.png' %}" alt="image">
+                                        <h4 class="ml-20">Recycle Plastic</h4>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 wow fadeInUp" data-wow-duration="1.8s" data-wow-delay=".8s">
+                                    <div class="d-flex align-items-center">
+                                        <img src="{% static 'images/about/about-info2.png' %}" alt="image">
+                                        <h4 class="ml-20">Wastage Management</h4>
+                                    </div>
+                                </div>
+                            </div>
+                            <ul class="wow mt-4 fadeInDown" data-wow-duration="1.2s" data-wow-delay=".2s">
+                                <li class="mb-20"><img class="pe-2" src="{% static 'images/icon/leaf.svg' %}" alt="icon">
+                                    Elit ullamcorper dignissim cras tincidunt lobortis feugiat vibe
+                                </li>
+                                <li class="mb-20"><img class="pe-2" src="{% static 'images/icon/leaf.svg' %}" alt="icon">
+                                    Praesent id ligula et nibh bibendum hendrerit vel et mi.
+                                </li>
+                                <li><img class="pe-2" src="{% static 'images/icon/leaf.svg' %}" alt="icon">
+                                    Etiam auctor lacus quis justo porttitor lacinia.
+                                </li>
+                            </ul>
+                            <div class="about_info d-flex align-items-center pt-60 wow fadeInUp"
+                                data-wow-duration="1.9s" data-wow-delay=".9s">
+                                <a href="about.html" class="btn-one"><span>More About us</span> <i
+                                        class="fa-solid fa-angles-right"></i></a>
+                                <span class="bor-left d-none d-sm-block mx-4"></span>
+                                <div class="info d-flex flex-wrap align-items-center">
+                                    <i class="fa-solid fa-phone-volume ring-animation"></i>
+                                    <div class="about_info_con">
+                                        <span class="d-block text-capitalize">call any time</span>
+                                        <a href="tel:+912659302003">+91 2659 302 003</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- About area end here -->
+
+        <!-- Achievement area start here -->
+        <section class="achievement" data-background="{% static 'images/bg/achievement-bg2.jpg' %}">
+            <div class="container">
+                <div class="row g-4 align-items-center justify-content-between">
+                    <div class="col-lg-5 achievement__bor-right wow fadeInUp" data-wow-duration="1.2s"
+                        data-wow-delay=".2s">
+                        <div class="achievement__item">
+                            <h2 class="text-white pt-3 pb-3">Our trees
+                                have been monitored</h2>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 achievement__bor-right wow fadeInUp" data-wow-duration="1.4s"
+                        data-wow-delay=".4s">
+                        <div class="achievement__item text-center">
+                            <img src="{% static 'images/icon/achieve1.png' %}" alt="icon">
+                            <h5>Trees planted</h5>
+                            <span class="count">6,472,068</span>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 achievement__bor-right wow fadeInUp" data-wow-duration="1.6s"
+                        data-wow-delay=".6s">
+                        <div class="achievement__item text-center">
+                            <img src="{% static 'images/icon/achieve2.png' %}" alt="icon">
+                            <h5>Families helped</h5>
+                            <span class="count">38,768</span>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 wow fadeInUp" data-wow-duration="1.8s" data-wow-delay=".8s">
+                        <div class="achievement__item text-center">
+                            <img src="{% static 'images/icon/achieve3.png' %}" alt="icon">
+                            <h5>CO2 captured (tonne)</h5>
+                            <span class="count">1,193,210</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Achievement area end here -->
+
+        <!-- Team area start here -->
+        <section class="team pt-130 pb-130">
+            <div class="container">
+                <div class="section-header text-center">
+                    <h5 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s"><img
+                            src="{% static 'images/icon/leaf.svg' %}" alt="image"> OUR TEAM MEMBERS</h5>
+                    <h2 class="wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".4s">foresty awesome team</h2>
+                </div>
+                <div class="row g-4">
+                    <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s">
+                        <div class="team__item">
+                            <div class="team__item-image">
+                                <img src="{% static 'images/team/01.png' %}" alt="image">
+                                <div class="team__item-image-icon social-icon">
+                                    <a href="#0"><i class="fa-brands fa-facebook-f"></i></a>
+                                    <a href="#0"><i class="fa-brands fa-twitter"></i></a>
+                                    <a href="#0"><i class="fa-brands fa-linkedin-in"></i></a>
+                                    <a href="#0"><i class="fa-brands fa-youtube"></i></a>
+                                </div>
+                            </div>
+                            <h3><a href="team-single.html">Dana A. Hutchison</a></h3>
+                            <span>Founder</span>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".4s">
+                        <div class="team__item">
+                            <div class="team__item-image">
+                                <img src="{% static 'images/team/02.png' %}" alt="image">
+                                <div class="team__item-image-icon social-icon">
+                                    <a href="#0"><i class="fa-brands fa-facebook-f"></i></a>
+                                    <a href="#0"><i class="fa-brands fa-twitter"></i></a>
+                                    <a href="#0"><i class="fa-brands fa-linkedin-in"></i></a>
+                                    <a href="#0"><i class="fa-brands fa-youtube"></i></a>
+                                </div>
+                            </div>
+                            <h3><a href="team-single.html">Bonnie J. Britt</a></h3>
+                            <span>Forest Officer</span>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-duration="1.6s" data-wow-delay=".6s">
+                        <div class="team__item">
+                            <div class="team__item-image">
+                                <img src="{% static 'images/team/03.png' %}" alt="image">
+                                <div class="team__item-image-icon social-icon">
+                                    <a href="#0"><i class="fa-brands fa-facebook-f"></i></a>
+                                    <a href="#0"><i class="fa-brands fa-twitter"></i></a>
+                                    <a href="#0"><i class="fa-brands fa-linkedin-in"></i></a>
+                                    <a href="#0"><i class="fa-brands fa-youtube"></i></a>
+                                </div>
+                            </div>
+                            <h3><a href="team-single.html">Francis A. Cote</a></h3>
+                            <span>Garden Maker</span>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-duration="1.8s" data-wow-delay=".8s">
+                        <div class="team__item">
+                            <div class="team__item-image">
+                                <img src="{% static 'images/team/04.png' %}" alt="image">
+                                <div class="team__item-image-icon social-icon">
+                                    <a href="#0"><i class="fa-brands fa-facebook-f"></i></a>
+                                    <a href="#0"><i class="fa-brands fa-twitter"></i></a>
+                                    <a href="#0"><i class="fa-brands fa-linkedin-in"></i></a>
+                                    <a href="#0"><i class="fa-brands fa-youtube"></i></a>
+                                </div>
+                            </div>
+                            <h3><a href="team-single.html">Mario L. Lawhorn</a></h3>
+                            <span>Co - Founder</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Team area end here -->
+</main>
 
 
 {% endblock %}
