--- a/website/templates/website/shared/footer.html
+++ b/website/templates/website/shared/footer.html
@@ -64,39 +64,72 @@
                                             class="fa-solid fa-chevron-right pe-1 primary-color"></i> Sustainability
                                     </a>
                                 </li>
-                                <li><a href="service-single.html"><i
-                                            class="fa-solid fa-chevron-right pe-1 primary-color"></i> Save Green
-                                        House
+                                <li><a href="{% url 'feedback' %}"><i
+                                            class="fa-solid fa-chevron-right pe-1 primary-color"></i> Feedback
                                     </a>
                                 </li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-xl-3 col-md-6 wow fadeInUp" data-wow-duration="1.8s" data-wow-delay=".8s">
-                        <div class="footer__item">
-                            <div class="footer__item-title">
-                                <h4>recent news</h4>
-                                <span class="footer__item-title-line"></span><span
-                                    class="footer__item-title-line2"></span>
+                            <div class="footer__item footer-three__item">
+                                <div class="footer__item-title">
+                                    <h4>gallery</h4>
+                                    <span class="footer__item-title-line"></span><span
+                                        class="footer__item-title-line2"></span>
+                                </div>
+                                <div class="row g-3">
+                                    <div class="col-4">
+                                        <a href="{% static 'images/footer/gallery1.png' %}" class="footer-popup image d-block">
+                                            <img src="{% static 'images/footer/gallery1.png' %}" alt="image">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-plus"></i>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="col-4">
+                                        <a href="{% static 'images/footer/gallery2.png' %}" class="footer-popup image d-block">
+                                            <img src="{% static 'images/footer/gallery2.png' %}" alt="image">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-plus"></i>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="col-4">
+                                        <a href="{% static 'images/footer/gallery3.png' %}" class="footer-popup image d-block">
+                                            <img src="{% static 'images/footer/gallery3.png' %}" alt="image">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-plus"></i>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="col-4">
+                                        <a href="{% static 'images/footer/gallery4.png' %}" class="footer-popup image d-block">
+                                            <img src="{% static 'images/footer/gallery4.png' %}" alt="image">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-plus"></i>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="col-4">
+                                        <a href="{% static 'images/footer/gallery5.png' %}" class="footer-popup image d-block">
+                                            <img src="{% static 'images/footer/gallery5.png' %}" alt="image">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-plus"></i>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="col-4">
+                                        <a href="{% static 'images/footer/gallery6.png' %}" class="footer-popup image d-block">
+                                            <img src="{% static 'images/footer/gallery6.png' %}" alt="image">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-plus"></i>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
-                            <ul class="footer__item-blog">
-                                <li class="pb-3">
-                                    <img src="{% static 'images/footer/01.png' %}' %}" alt="image">
-                                    <div class="ms-3">
-                                        <h4><a href="blog-single.html">Close up picture of the sapling</a></h4>
-                                        <span>2 weeks ago</span>
-                                    </div>
-                                </li>
-                                <li>
-                                    <img src="{% static 'images/footer/02.png' %}' %}" alt="image">
-                                    <div class="ms-3">
-                                        <h4><a href="blog-single.html">Close up picture of the sapling</a></h4>
-                                        <span>2 weeks ago</span>
-                                    </div>
-                                </li>
-                            </ul>
                         </div>
-                    </div>
                 </div>
             </div>
         </div>
