--- a/website/templates/website/sustainability.html
+++ b/website/templates/website/sustainability.html
@@ -43,7 +43,7 @@
                                             </h2>
                                         <div class="about-two__right-item" data-animation="fadeInUp" data-delay="1.4s">
                                             <div class="about_info d-flex align-items-center pt-65">
-                                                <a href="{% url 'contact' %}" class="btn-one-light"><span>contact us</span> <i
+                                                <a href="{% url 'contact' %}" class="btn-one-light"><span>view more</span> <i
                                                         class="fa-solid fa-angles-right"></i></a>
                                                 <span class="bor-left d-none d-sm-block mx-4"></span>
                                                 <div class="info d-flex flex-wrap align-items-center">
