--- a/website/templates/website/contact.html
+++ b/website/templates/website/contact.html
@@ -79,6 +79,14 @@
             </div>
         </section>
         <!-- Contact form area end here -->
+
+        <!-- Contact map area start here -->
+        <div class="google-map">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d58172.13111404762!2d36.96200687344218!3d-1.1980466769871558!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sWestport%20Industrial%20city!5e1!3m2!1sen!2ske!4v1721807730967!5m2!1sen!2ske"
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <!-- Contact map area end here -->
 </main>
     <!-- Back to top area start here -->
     <div class="scroll-up">
